* 2017/06/11
 - LE bug A2 est corrigé, mais j'ai pas compris

* 2017/06/10
 - Mise en Place de la Variable NoFont, en tant que variable de la classe MAX7219_Dot_Matrix
 - Correction de la gestion du nombre de LEd 8x8 (BUG A1) en créeant une fonction reinit qui nécessite tout de même de reseter le controleur pour que cela fonctionne
 -=- BUG A2 : La gestion de l'offset négatif dans sendSmooth ne fonctionne pas correctement, rien de n'affiche pendant longtemps


* 2017/06/06
  - Mise en place de la gestion des variable pour heure (<hh:mm:ss>) et date (<jj/mm/aa> et <jj/mm>)
  - Mise en place de la gestion du nombre de MAX7219 dans la tructure config et EEPROM,
  -=- BUG A1: le nombre MAX7219 est bien sauvegardé, mais n'a pas l'aire d'etre pris en compte 
        Peut etre du au faite de l'initialiser 2 fois pour que ce soit une variable globale
  - TODO TD1: Ajouté a la page principale un bulle d'aide pour les variables et a terme les caractere spéciaux 
        ex : Train, température, pluie, soleil, .......


* 2017/06/05
  - Creation de la fct de recuperation des valeurs actuel pour message
  - Amélioration de l'affichage de la page de saisie de message
  
* 2017/06/04
 - Fin de la gestion de config avec mise en place d'un CSS dédier et d'un fichier ico associé
 - Creation du fichier PAge_Message.h qui reprend les fonction qui existait dans .ino
 TODO : 
    Regrouper toutes les HEADER et FOOTER des pages

* 2017/06/02
 - Ajout de la gestion de configuration en mode AP d'après :
   https://www.john-lassen.de/en/projects/esp-8266-arduino-ide-webconfig

* 2017/05/28
 - Ajout de 2 module suplémentaire.
 - Pour afficher des police 5 Bit, il faut tout refaire au niveau de l'envoie des donnée
 - Gestion d'un état qui permet d'économiser l'énergie, en arrêtant le Led, mais sans metre encore le controleur dans un etat de sommeil

* 2017/05/26
 - LE problème c'est que tous l'algo est pensé pour envoyé 8 bit * 8bit pour chaque caracetere