@@ -15,7 +15,8 @@ const char PAGE_AdminMainPage[] PROGMEM = R"=====(
 <a href="info.html"   style="width:250px"  class="btn btn--m btn--blue" >Network Information</a><br>
 <a href="ntp.html"   style="width:250px"  class="btn btn--m btn--blue" >NTP Settings</a><br>
 
-
+<hr>
+      <a href='admin.html' class='bottom'>page de gestion de l'affichage</a>
 <script>
 window.onload = function ()
 {
